After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 724488 - Fix transiency of dialog windows
Fix transiency of dialog windows
Status: RESOLVED FIXED
Product: gnome-nibbles
Classification: Applications
Component: general
git master
Other All
: Normal normal
: ---
Assigned To: gnome-nibbles-maint
gnome-nibbles-maint
Depends on:
Blocks:
 
 
Reported: 2014-02-16 16:25 UTC by Michael Catanzaro
Modified: 2014-02-16 23:33 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix transiency of dialog windows (903 bytes, patch)
2014-02-16 16:25 UTC, Michael Catanzaro
committed Details | Review

Description Michael Catanzaro 2014-02-16 16:25:43 UTC
The scores, preferences, and About dialogs were not properly associated
with the main window. Small regression from the port to GtkApplication,
caused by accidentally shadowing the preexisting global window variable.
Comment 1 Michael Catanzaro 2014-02-16 16:25:47 UTC
Created attachment 269313 [details] [review]
Fix transiency of dialog windows
Comment 2 Michael Catanzaro 2014-02-16 23:33:10 UTC
Attachment 269313 [details] pushed as b954095 - Fix transiency of dialog windows