Fix transiency of dialog windows

The scores, preferences, and About dialogs were not properly associated
with the main window. Small regression from the port to GtkApplication,
caused by accidentally shadowing the preexisting global window variable.

https://bugzilla.gnome.org/show_bug.cgi?id=724488